# komodo-armv7

./: Cargo.toml  runfile.toml
.cargo/: config.toml
client/core/rs/: Cargo.toml
client/core/ts/: package.json
client/core/ts/src/: types.ts
compose/: compose.env
config/: core.config.toml
docsite/docs/setup/: connect-servers.mdx
example/alerter/: Dockerfile
example/update_logger/: Dockerfile
lib/command/src/: lib.rs
ui/: package.json  vite.config.ts
ui/public/client/: types.d.ts  types.js
ui/public/schema/: resources.json
ui/src/: index.scss  main.tsx  monaco.ts  router.tsx
ui/src/app/: index.tsx  sidebar.tsx
ui/src/app/topbar/: alerts.tsx  index.tsx  keyboard-shortcuts.tsx  link.tsx  updates.tsx  user-dropdown.tsx  websocket-status.tsx
ui/src/components/: batch-executions.tsx  confirm-modal-with-disable.tsx  export-toml.tsx  file-source.tsx  inspect-section.tsx  log-section.tsx  maintenance-windows.tsx  stack-service-link.tsx  stack-service-selector.tsx  template-switch.tsx  user-avatar.tsx
ui/src/components/alerts/: card.tsx  details.tsx  level.tsx  list.tsx
ui/src/lib/: color.ts  formatting.ts  hooks.ts  icons.ts  socket.tsx  utils.ts
ui/src/pages/: alert.tsx  alerts.tsx  containers.tsx  login.tsx  profile.tsx  resource.tsx  resources.tsx  schedules.tsx  terminal.tsx  update.tsx  updates.tsx
ui/src/resources/: delete.tsx  description.tsx  header.tsx  new.tsx  not-found.tsx  selector.tsx  sub-page.tsx  tags.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/generate/: mod.rs  resource_schema.rs
(+234 files in other folders)
